# cs146s-week4-automation

./: CLAUDE.md  pyproject.toml  writeup.md
.claude/commands/: add-task.md  do-next-task.md
backend/app/: main.py  models.py  schemas.py
backend/app/routers/: action_items.py  notes.py
backend/app/services/: extract.py
backend/tests/: conftest.py  test_action_items.py  test_extract.py  test_notes.py
docs/: API.md  TASKS.md
frontend/: app.js  index.html
reports/: latest.html
