[project]
name = "week4"
version = "0.1.0"
description = "Week 4 assignment starter app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "black>=26.3.0",
    "pre-commit>=4.5.1"
]
